# assertllm2-sby

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
AssertLLM2/assertllm2_sby/: __init__.py  assertion_lowering.py  contract_adapter.py  contract_backend.py  contract_internal_adapter.py  coverage.py  dataset.py  formal_types.py  generator.py  harness_builder.py  isolation.py  mutation_runner.py  paths.py  real_design.py  runtime_config.py  sable_adapter.py  sable_assertneuro_adapter.py  sby_backend.py  source_plan.py  suite_runner.py
AssertLLM2/assertllm2_sby.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
assertllm2_sby/: assertion_parser.py  cli.py  compat.py  contract_adapter.py  dataset.py  formal_types.py  generator.py  harness_builder.py  isolation.py  manifest.py  models.py  mutation_runner.py  paths.py  real_design.py  reporting.py  result_parser.py  runtime_config.py  sby_backend.py  self_test.py  source_plan.py
config/: assertllm2_sby.yaml
docs/: ASSERTLLM2_SBY_IMPLEMENTATION_PLAN.md  ASSERTLLM2_SBY_PROJECT_RULES.md  ASSERTLLM2_SBY_REPOSITORY_AUDIT.md  ASSERTLLM2_SBY_RUNTIME_CONFIG.md  ASSERTLLM2_SBY_SETUP.md  HANDOFF_2026_06_17.md
optimus-the-ai-platform-to-build-and-ship/: pnpm-lock.yaml
scripts/: check_assertllm2_sby_environment.py
tests/: test_adapter.py  test_contract_adapter.py  test_contract_backend.py  test_contract_internal_adapter.py  test_formal_backend.py  test_real_design_ports.py  test_run_design.py  test_sable_adapter.py  test_sable_assertneuro_adapter.py  test_suite_runner.py
(+26 files in other folders)
